--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arc-app-example",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "An example Arc application",
   "main": "index.js",
   "scripts": {
@@ -33,6 +33,7 @@
     "chai": "^4.1.2",
     "cucumber": "^4.0.0",
     "mocha": "^5.0.4",
-    "nodemon": "^1.17.2"
+    "nodemon": "^1.17.2",
+    "nyc": "^11.6.0"
   }
 }
