Updates package information

--- a/.env.template
+++ b/.env.template
@@ -4,9 +4,9 @@ ARC_PIVOTAL_TOKEN=""
 ARC_PIVOTAL_PROJECT="2148007"
 ARC_GITHUB_REPO="https://github.com/altereagle/arc"
 ARC_GITHUB_WIKI="https://github.com/altereagle/arc/wiki"
-ARC_TRAVIS_BADGE_URL="https://travis-ci.org/altereagle/arc-app-example"
-ARC_TRAVIS_BADGE_IMG_URL="https://travis-ci.org/altereagle/arc-app-example.svg?branch=master"
-ARC_CODECLIMATE_BADGE_URL="https://codeclimate.com/github/altereagle/arc-app-example/maintainability"
-ARC_CODECLIMATE_BADGE_IMG_URL="https://api.codeclimate.com/v1/badges/6d55db826315077e802b/maintainability"
-ARC_CODECLIMATE_COVERAGE_BADGE_URL="https://codeclimate.com/github/altereagle/arc-app-example/test_coverage"
-ARC_CODECLIMATE_COVERAGE_BADGE_IMG_URL="https://api.codeclimate.com/v1/badges/6d55db826315077e802b/test_coverage"
+ARC_TRAVIS_BADGE_URL="https://travis-ci.org/altereagle/arc.app-example"
+ARC_TRAVIS_BADGE_IMG_URL="https://travis-ci.org/altereagle/arc.app-example.svg?branch=master"
+ARC_CODECLIMATE_BADGE_URL="https://codeclimate.com/github/altereagle/arc.app-example/maintainability"
+ARC_CODECLIMATE_BADGE_IMG_URL="https://api.codeclimate.com/v1/badges/75a81f454a5795843414/maintainability"
+ARC_CODECLIMATE_COVERAGE_BADGE_URL="https://codeclimate.com/github/altereagle/arc.app-example/test_coverage"
+ARC_CODECLIMATE_COVERAGE_BADGE_IMG_URL="https://api.codeclimate.com/v1/badges/75a81f454a5795843414/test_coverage"
